Menambahkan line code baru pada border.css

--- a/5.border/border.html
+++ b/5.border/border.html
@@ -24,5 +24,6 @@
     <p class="outset">Outset</p>
     <p class="ridge">Ridge</p>
     <p class="hidden">Hidden</p>
+    <p class="google">Google</p>
 </body>
 </html>
