--- a/46.display/index.html
+++ b/46.display/index.html
@@ -11,5 +11,30 @@
     <p class="inline">Mengubah sifat element menjadi bersifat inline.</p>
     <span class="block">Mengubah sifat element menjadi bersifat block.</span>
     <span class="inline-block">Mengubah sifat element menjadi bersifat inline-block.</span>
+
+    <p class="terlihat">
+        Kalimat ini akan terlihat di web browser.
+    </p>
+    <p class="tidak-terlihat">
+        Kalimat ini tidak akan terlihat di web browser, tapi meninggalkan jejak berupa spasi atau jarak.
+    </p>
+    <table border="1" width="100%">
+        <tr>
+            <th>No</th>
+            <th>Nama</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Muhammad Saleh Solahudin</td>
+        </tr>
+        <tr class="tidak-terlihat-untuk-tabel"> <!-- Tidak akan ditampilkan dan tidak akan meninggalkan jejak -->
+            <td>2</td>
+            <td>Fathul Aditya</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Elvine Bariel</td>
+        </tr>
+    </table>
 </body>
 </html>
