Menambahkan catatan dan code pada folder opacity

--- a/30.opacity/opacity.html
+++ b/30.opacity/opacity.html
@@ -12,6 +12,6 @@
     <link rel="stylesheet" href="opacity.css">
 </head>
 <body>
-    <img src="/cheat-code/_img/ramdaniii.jpg" alt="">
+    <div class="kosong"></div>
 </body>
 </html>
