Menghapus file transisi dan menambahkan code dan catatan di file transition

--- a/16.transition/transition.html
+++ b/16.transition/transition.html
@@ -15,5 +15,7 @@
 <body>
     <div class="ramdani"><h1>Ramdani Arvianto</h1></div>
     <div class="lingkaran"></div>
+
+    <div class="royalblue"></div>
 </body>
 </html>
