Menambahkan file gambar dan catatan pada folder 18.keyframes

--- a/18.keyframes/keyframes.html
+++ b/18.keyframes/keyframes.html
@@ -16,6 +16,6 @@
 <body>
     <div class="satu"></div>
     <div class="dua"></div>
-    <div class="kipas"><img src="/cheat-code/_img/fan.png" width="250px" height="250px" alt=""></div>
+    <div class="kipas"><img src="fan.png" width="250px" height="250px" alt=""></div>
 </body>
 </html>
