Menambahkan catatan pada keyframes

--- a/18.keyframes/keyframes.html
+++ b/18.keyframes/keyframes.html
@@ -17,5 +17,6 @@
     <div class="satu"></div>
     <div class="dua"></div>
     <div class="kipas"><img src="fan.png" width="250px" height="250px" alt=""></div>
+    <div class="kotak"></div>
 </body>
 </html>
