Menambahkan file ramdani.jpg pada folder 42.styleimg dan perbaikan code

--- a/42.styleimg/filter.html
+++ b/42.styleimg/filter.html
@@ -14,16 +14,16 @@
     <link rel="stylesheet" href="filter.css">
 </head>
 <body>
-    <img src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani">
-    <img class="blur" src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani">
-    <img class="brightness" src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani">
-    <img class="contrast" src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani">
-    <img class="grayscale" src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani">
-    <img class="huerotate" src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani">
-    <img class="invert" src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani">
-    <img class="opacity" src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani">
-    <img class="saturate" src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani">
-    <img class="sepia" src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani">
-    <img class="shadow" src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani">
+    <img src="ramdani.jpg" alt="Ramdani">
+    <img class="blur" src="ramdani.jpg" alt="Ramdani">
+    <img class="brightness" src="ramdani.jpg" alt="Ramdani">
+    <img class="contrast" src="ramdani.jpg" alt="Ramdani">
+    <img class="grayscale" src="ramdani.jpg" alt="Ramdani">
+    <img class="huerotate" src="ramdani.jpg" alt="Ramdani">
+    <img class="invert" src="ramdani.jpg" alt="Ramdani">
+    <img class="opacity" src="ramdani.jpg" alt="Ramdani">
+    <img class="saturate" src="ramdani.jpg" alt="Ramdani">
+    <img class="sepia" src="ramdani.jpg" alt="Ramdani">
+    <img class="shadow" src="ramdani.jpg" alt="Ramdani">
 </body>
 </html>
