--- a/42.styleimg/imgallery.html
+++ b/42.styleimg/imgallery.html
@@ -16,37 +16,37 @@
 <body>
     <div class="responsive">
         <div class="gallery">
-            <a target="_blank" href="/cheat-code/_img/gunung.jpg">
-                <img src="/cheat-code/_img/gunung.jpg" alt="Gunung" width="600px" height="400px">
+            <a target="_blank" href="ramdani.jpg">
+                <img src="ramdani.jpg" alt="Gunung" width="600px" height="400px">
             </a>
-            <div class="desc">Gunung</div>
+            <div class="desc">Ramdani 1</div>
         </div>
     </div>
 
     <div class="responsive">
         <div class="gallery">
-            <a target="_blank" href="/cheat-code/_img/becak.jpg">
-                <img src="/cheat-code/_img/becak.jpg" alt="Becak" width="600px" height="400px">
+            <a target="_blank" href="ramdani.jpg">
+                <img src="ramdani.jpg" alt="Becak" width="600px" height="400px">
             </a>
-            <div class="desc">Becak</div>
+            <div class="desc">Ramdani 2</div>
         </div>
     </div>
 
     <div class="responsive">
         <div class="gallery">
-            <a target="_blank" href="/cheat-code/_img/gunung-sephia.jpg">
-                <img src="/cheat-code/_img/gunung-sephia.jpg" alt="Gunung" width="600px" height="400px">
+            <a target="_blank" href="ramdani.jpg">
+                <img src="ramdani.jpg" alt="Gunung" width="600px" height="400px">
             </a>
-            <div class="desc">Gunung Sephia</div>
+            <div class="desc">Ramdani 3</div>
         </div>
     </div>
 
     <div class="responsive">
         <div class="gallery">
-            <a target="_blank" href="/cheat-code/_img/orang-gunung.jpg">
-                <img src="/cheat-code/_img/orang-gunung.jpg" alt="Gunung" width="600px" height="400px">
+            <a target="_blank" href="ramdani.jpg">
+                <img src="ramdani.jpg" alt="Gunung" width="600px" height="400px">
             </a>
-            <div class="desc">Orang Gunung</div>
+            <div class="desc">Ramdani 4</div>
         </div>
     </div>
 
