--- a/42.styleimg/imgover.html
+++ b/42.styleimg/imgover.html
@@ -15,21 +15,21 @@
 </head>
 <body>
     <div class="container">
-        <img src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani Arvianto" class="image">
+        <img src="ramdani.jpg" class="image">
         <div class="overlay">
             <div class="text">Ramdani Arvianto</div>
         </div>
     </div>
 
     <div class="container2">
-        <img src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani Arvianto" class="image2">
+        <img src="ramdani.jpg" class="image2">
         <div class="middle">
             <div class="text2">Ramdani Arvianto</div>
         </div>
     </div>
 
     <div class="container3">
-        <img src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani Arvianto" class="image3">
+        <img src="ramdani.jpg" class="image3">
         <div class="overlay3">
             <div class="text3">Ramdani Arvianto</div>
         </div>
