--- a/42.styleimg/imgtext.html
+++ b/42.styleimg/imgtext.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/cheat-code/_img/soto.jpg">
+        <img src="ramdani.jpg">
         <div class="tengah">Tengah</div>
         <div class="kirbaw">Kiri Bawah</div>
         <div class="kirtas">Kiri Atas</div>
