--- a/42.styleimg/polaroid.html
+++ b/42.styleimg/polaroid.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="polaroid">
-        <img src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani Arvianto" width="100%">
+        <img src="ramdani.jpg" alt="Ramdani Arvianto" width="100%">
         <div class="container">Ramdani Arvianto</div>
     </div>
 </body>
