--- a/42.styleimg/respimg.html
+++ b/42.styleimg/respimg.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="respimg.css">
 </head>
 <body>
-    <img src="/cheat-code/_img/rollsroyce_black.jpg" alt="black">
-    <img src="/cheat-code/_img/rollsroyce_blue.jpg" alt="blue">
-    <img src="/cheat-code/_img/rollsroyce_grey.jpg" alt="grey">
-    <img src="/cheat-code/_img/rollsroyce_white.jpg" alt="white">
+    <img src="ramdani.jpg" alt="black">
+    <img src="ramdani.jpg" alt="blue">
+    <img src="ramdani.jpg" alt="grey">
+    <img src="ramdani.jpg" alt="white">
 </body>
 </html>
