--- a/42.styleimg/simg.html
+++ b/42.styleimg/simg.html
@@ -14,6 +14,6 @@
     <link rel="stylesheet" href="simg.css">
 </head>
 <body>
-    <img src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani">
+    <img src="ramdani.jpg" alt="Ramdani">
 </body>
 </html>
