--- a/42.styleimg/thumbn.html
+++ b/42.styleimg/thumbn.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <h1>Thumbnail Image Sebagai Link</h1>
-    <a href="/cheat-code/_img/ramdaniii.jpg" target="_blank">
-        <img src="/cheat-code/_img/ramdaniii.jpg" alt="Ramdani Arvianto">
+    <a href="ramdani.jpg" target="_blank">
+        <img src="ramdani.jpg" alt="Ramdani Arvianto">
     </a>
 </body>
 </html>
