Menghapus 1 file fosize.html dan merubah beberapa code

--- a/1.font/font.html
+++ b/1.font/font.html
@@ -20,5 +20,15 @@
         <a href="#">saj</a>
     <a href="#">dsan</a>
     </div>
+
+    <p class="font-xx-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, commodi?</p>
+    <p class="font-x-small">Dicta hic voluptatem quidem, nisi cum soluta dolorum quos quo.</p>
+    <p class="font-small">Minus odit explicabo commodi dolore architecto deleniti laudantium, numquam qui?</p>
+    <p class="font-medium">Eum praesentium tempora enim nesciunt distinctio iure pariatur sed maxime.</p>
+    <p class="font-large">Tempore accusamus placeat cum qui, dignissimos omnis dolores tempora ipsa!</p>
+    <p class="font-x-large">Iure ipsum eius, voluptatibus dolores ab reprehenderit mollitia, voluptatem in.</p>
+    <p class="font-xx-large">Culpa aliquam voluptate commodi quasi a similique, deserunt possimus eius.</p>
+    <p class="font-20-px">Ipsum reiciendis, sit cupiditate accusantium similique blanditiis, excepturi inventore.</p>
+    <p class="font-150-persen">Accusantium ipsam fugiat ad sint, officia quo praesentium autem vel.</p>
 </body>
 </html>
