--- a/04. Background Color/index.html
+++ b/04. Background Color/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catatan CSS</title>
+    <title>Background Color</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Catatan CSS</h1>
+    <h1>Red</h1>
+    <p>Royalblue</p>
+    <span>Green Yellow</span>
 </body>
 </html>
