Menambahkan catatan pada folder 04. Background

--- a/04. Background/index.html
+++ b/04. Background/index.html
@@ -11,6 +11,8 @@
     <p>Royalblue</p>
     <span>Green Yellow</span>
 
-    <div></div>
+    <div class="border">Background mengisi bagian belakang border.</div>
+    <div class="padding">Background hanya sampai tepi border.</div>
+    <div class="content">Background hanya mengisi bagian kontennya saja.</div>
 </body>
 </html>
