Menambahkan catatan pada folder 04. Background

--- a/04. Background/index.html
+++ b/04. Background/index.html
@@ -14,5 +14,8 @@
     <div class="border">Background mengisi bagian belakang border.</div>
     <div class="padding">Background hanya sampai tepi border.</div>
     <div class="content">Background hanya mengisi bagian kontennya saja.</div>
+
+    <div class="linear-gradient"></div>
+    <div class="radial-gradient"></div>
 </body>
 </html>
