Menambahkan banyak folder baru

--- a/03. Text/index.html
+++ b/03. Text/index.html
@@ -14,5 +14,13 @@
 
         <p class="nowrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos deleniti quidem aliquid non. Illum, magni quis. Eum esse similique iusto facilis pariatur iste qui aperiam omnis. Suscipit eveniet debitis necessitatibus.</p>
     </div>
+
+    <br><br><br><br><br>
+
+    <p class="vertikal">Paragraf Vertikal</p>
+
+    <br><br><br><br><br>
+
+    
 </body>
 </html>
