--- a/09. Border/index.html
+++ b/09. Border/index.html
@@ -19,5 +19,78 @@
     <p class="ridge">Ridge</p>
     <p class="hidden">Hidden</p>
     <p class="google">Google</p>
+
+    <div class="satu">
+        <p>Border Radius</p>
+        <p>20px</p>
+    </div>
+    <div class="dua">
+        <p>Border Radius</p>
+        <p>20px | 50px</p>
+    </div>
+    <div class="tiga">
+        <p>Border Radius</p>
+        <p>0 | 40px | 40px | 40px</p>
+    </div>
+    <div class="empat">
+        <p>Border Radius</p>
+        <p>40px | 0 | 40px | 40px</p>
+    </div>
+    <div class="lima">
+        <p>Border Radius</p>
+        <p>40px | 40px | 0 | 40px</p>
+    </div>
+    <div class="enam">
+        <p>Border Radius</p>
+        <p>40px | 40px | 40px | 0</p>
+    </div>
+    <div class="tujuh">
+        <p>Border Radius</p>
+        <br>
+        <p>border-end-end-radius</p>
+        <p>40px</p>
+    </div>
+    <div class="delapan">
+        <p>Border Radius</p>
+        <br>
+        <p>border-top-left-radius</p>
+        <p>40px</p>
+    </div>
+    <div class="sembilan">
+        <p>Border Radius</p>
+        <br>
+        <p>border-top-right-radius</p>
+        <p>40px</p>
+    </div>
+    <div class="sepuluh">
+        <p>Border Radius</p>
+        <br>
+        <p>border-end-start-radius</p>
+        <p>40px</p>
+    </div>
+    <div class="sebelas">
+        <p>Border Radius</p>
+        <br>
+        <p>border-start-end-radius</p>
+        <p>40px</p>
+    </div>
+    <div class="duabelas">
+        <p>Border Radius</p>
+        <br>
+        <p>border-start-start-radius</p>
+        <p>40px</p>
+    </div>
+    <div class="tigabelas">
+        <p>Border Radius</p>
+        <br>
+        <p>border-bottom-left-radius</p>
+        <p>40px</p>
+    </div>
+    <div class="empatbelas">
+        <p>Border Radius</p>
+        <br>
+        <p>border-bottom-right-radius</p>
+        <p>40px</p>
+    </div>
 </body>
 </html>
