Memperbaiki semua isi folder dan menambahkan beberapa folder baru

--- a/03. Text/index.html
+++ b/03. Text/index.html
@@ -15,12 +15,63 @@
         <p class="nowrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos deleniti quidem aliquid non. Illum, magni quis. Eum esse similique iusto facilis pariatur iste qui aperiam omnis. Suscipit eveniet debitis necessitatibus.</p>
     </div>
 
+    <div class="word-break">
+        <p>word-break: break-all;</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt nemo quo in possimus facere exercitationem praesentium asperiores blanditiis vero. Dolores id laboriosam aliquam itaque doloremque dolorum incidunt minus perspiciatis explicabo sed animi dicta nisi ducimus, sequi distinctio doloribus libero ipsa labore ipsam veritatis consectetur veniam numquam quisquam? Iusto, tenetur enim.</p>
+    </div>
+
+    <div class="word-wrap">
+        <p>word-wrap: normal;</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt nemo quo in possimus facere exercitationem praesentium asperiores blanditiis vero.
+        RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR
+        Dolores id laboriosam aliquam itaque doloremque dolorum incidunt minus perspiciatis explicabo sed animi dicta nisi ducimus, sequi distinctio doloribus libero ipsa labore ipsam veritatis consectetur veniam numquam quisquam? Iusto, tenetur enim.</p>
+    </div>
+
+    <div class="white-space-nw">
+        <p>white-space: nowrap;</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt nemo quo in possimus facere exercitationem praesentium asperiores blanditiis vero.
+        RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR
+        Dolores id laboriosam aliquam itaque doloremque dolorum incidunt minus perspiciatis explicabo sed animi dicta nisi ducimus, sequi distinctio doloribus libero ipsa labore ipsam veritatis consectetur veniam numquam quisquam? Iusto, tenetur enim.</p>
+    </div>
+
+    <div class="white-space-pre">
+        <p>white-space: pre;</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt nemo quo in possimus facere exercitationem praesentium asperiores blanditiis vero.
+        RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR
+        Dolores id laboriosam aliquam itaque doloremque dolorum incidunt minus perspiciatis explicabo sed animi dicta nisi ducimus, sequi distinctio doloribus libero ipsa labore ipsam veritatis consectetur veniam numquam quisquam? Iusto, tenetur enim.</p>
+    </div>
+
+    <div class="white-space-pw">
+        <p>white-space: pre-wrap;</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt nemo quo in possimus facere exercitationem praesentium asperiores blanditiis vero.
+        RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR
+        Dolores id laboriosam aliquam itaque doloremque dolorum incidunt minus perspiciatis explicabo sed animi dicta nisi ducimus, sequi distinctio doloribus libero ipsa labore ipsam veritatis consectetur veniam numquam quisquam? Iusto, tenetur enim.</p>
+    </div>
+
+    <div class="white-space-pl">
+        <p>white-space: pre-line;</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt nemo quo in possimus facere exercitationem praesentium asperiores blanditiis vero.
+        RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR
+        Dolores id laboriosam aliquam itaque doloremque dolorum incidunt minus perspiciatis explicabo sed animi dicta nisi ducimus, sequi distinctio doloribus libero ipsa labore ipsam veritatis consectetur veniam numquam quisquam? Iusto, tenetur enim.</p>
+    </div>
+
     <br><br><br><br><br>
 
     <p class="vertikal">Paragraf Vertikal</p>
 
     <br><br><br><br><br>
 
-    
+    <p class="ol">Over Line | Ramdani Arvianto</p>
+    <p class="ol2">Over Line Dotted | Ramdani Arvianto</p>
+    <p class="lt">Line Through | Ramdani Arvianto</p>
+    <p class="lt2">Line Through Double | Ramdani Arvianto</p>
+    <p class="ul">Under Line | Ramdani Arvianto</p>
+    <p class="ul2">Under Line Wave | Ramdani Arvianto</p>
+
+    <br><br><br>
+
+    <a href="#">default</a> | <a href="#">text-decoration: none;</a>
+
+    <br><br><br>
 </body>
 </html>
