Menambahkan catatan pada folder 06. Pseudo Class

--- a/06. Presudo Class/index.html
+++ b/06. Presudo Class/index.html
@@ -13,6 +13,46 @@
 
     <input type="text" placeholder="Focus">
 
+    <br><br><br><br>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Nama</th>
+                <th>Prodi</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Ramdani Arvianto</td>
+                <td>Teknik Informatika</td>
+            </tr>
+            <tr>
+                <td>Ramdani Arvianto</td>
+                <td>Teknik Informatika</td>
+            </tr>
+            <tr>
+                <td>Ramdani Arvianto</td>
+                <td>Teknik Informatika</td>
+            </tr>
+            <tr>
+                <td>Ramdani Arvianto</td>
+                <td>Teknik Informatika</td>
+            </tr>
+            <tr>
+                <td>Ramdani Arvianto</td>
+                <td>Teknik Informatika</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="2">Footer</th>
+            </tr>
+        </tfoot>
+    </table>
+    
+    <br><br><br><br>
+
     <p>Paragraf 1 di luar div</p>
     <hr>
     <div>
